fix header's z-index

--- a/uibase/src/styles/EcoreApp.css
+++ b/uibase/src/styles/EcoreApp.css
@@ -6,6 +6,7 @@ header {
 	width: 100%;
 	left: 0;
 	top: 0;
+	z-index: 100;
 	margin-bottom: 100px;
 }
 
